# TwinLLM

./: .gitignore  pyproject.toml  settings.py  test.py
configs/docker_configs/mongodb/: create_mongodb_server.txt  mongo-compose.yaml
configs/pipeline_configs/data_etl_pipeline_configs/: data_etl_user1.yaml  data_etl_user2.yaml  data_etl_user3.yaml  data_etl_user4.yaml
configs/utils_configs/: date_codes_to_num_days.json  programming_languages_to_extension_mapping.json
data_crawlers/: base_crawler.py  base_selenium_crawler.py  crawler_dispatcher.py  github_crawler.py  linkedin_crawler.py  medium_crawler.py  substack_crawler.py  thread_crawler.py  x_crawler.py
data_crawlers/crawlers/: base_crawler.py  base_selenium_crawler.py  github_crawler.py  linkedin_crawler.py  medium_crawler.py  substack_crawler.py  thread_crawler.py  x_crawler.py
data_crawlers/crawlers/base/: base_crawler.py  base_selenium_crawler.py
data_preprocessors/data_cleaners/: article_data_cleaner.py  post_data_cleaner.py  repository_data_cleaner.py  tweet_data_cleaner.py
data_preprocessors/data_cleaners/base/: data_cleaner.py
databases/mongodb/: mongodb_connection.py
databases/qdrant/: qdrant_connection.py
document_categories/: data_category.py
document_categories/nosql_db_document_categories/: article_document.py  base_document.py  post_document.py  repository_document.py  tweet_document.py  user_document.py
document_categories/nosql_db_document_categories/base/: base_document.py  no_sql_base_document.py  user_document.py
document_categories/vectordb_document_categories/: vector_base_document.py
document_categories/vectordb_document_categories/chunked_documents/: article_chunked_document.py  chunked_document.py  post_chunked_document.py  repository_chunked_document.py  tweet_chunked_document.py
document_categories/vectordb_document_categories/cleaned_documents/: cleaned_article_document.py  cleaned_document.py  cleaned_post_document.py  cleaned_repository_document.py  cleaned_tweet_document.py
document_categories/vectordb_document_categories/embedded_documents/: embedded_article_document.py  embedded_document.py  embedded_post_document.py  embedded_repository_document.py  embedded_tweet_document.py
models/: embedding_model.py
pipelines/: run_pipeline.py
pipelines/data_etl_pipeline/: create_data_etl_pipeline.py
pipelines/data_etl_pipeline/metadata/: get_crawl_links_metadata.py  get_or_create_user_metadata.py
pipelines/data_etl_pipeline/steps/: crawl_links.py  get_or_create_user.py
utils/: convert_date_codes_to_date.py  convert_date_codes_to_num_days.py  extension_to_programming_language.py  singleton_meta_class.py
utils/exceptions/: invalid_metadata_exception.py  repository_crawling_exception.py  substack_scrapping_exception.py  thread_scrapping_exception.py  x_scrapping_exception.py
(+14 files in other folders)
