[tool.poetry]
name = "llm-twin"
version = "2.4.1"
description = ""
authors = ["amartya pawar"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.11"
zenml = { version = "0.74.0", extras = ["server"] }
pymongo = "^4.6.2"
click = "^8.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
numpy = "^1.26.4"
poethepoet = "0.29.0"
datasets = "^3.0.1"
torch = "2.2.2"

# Digital data ETL
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
jmespath = "^1.0.1"
chromedriver-autoinstaller = "^0.6.4"

# Feature engineering
qdrant-client = "^1.8.0"
langchain = "^0.2.11"
sentence-transformers = "^3.0.0"

# RAG
langchain-openai = "^0.1.3"
langchain-mistralai = "^0.1.2"
langchain-google-genai = "^1.0.2"
langchain-anthropic = "^0.1.8"
langchain-cohere = "^0.1.2"
langchain-groq = "^0.1.2"
jinja2 = "^3.1.4"
tiktoken = "^0.7.0"
fake-useragent = "^1.5.1"
langchain-community = "^0.2.11"

# Inference
fastapi = ">=0.100,<=0.110"
uvicorn = "^0.30.6"
opik = "^0.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pre-commit = "^3.7.1"
pytest = "^8.2.2"


[tool.poetry.group.aws.dependencies]
sagemaker = ">=2.232.2"
s3fs = ">2022.3.0"
aws-profile-manager = "^0.7.3"
kubernetes = "^30.1.0"
sagemaker-huggingface-inference-toolkit = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#Poe the Poet Configurations:
[tool.poe.tasks]

## Setting up docker infrastructure for MongoDB:

### Creating the Mongodb infrastructure:
local-docker-mongodb-infrastructure-up="docker compose -f configs/docker_configs/mongodb/mongo-compose.yaml up -d"

### Shutting the Mongodb infrastructure:
local-docker-mongodb-infrastructure-down="docker compose -f configs/docker_configs/mongodb/mongo-compose.yaml down"

## Setting up the Zenml Server:
set-local-stack="poetry run zenml stack set default"
local-zenml-server-down="poetry run zenml logout --local"
local-zenml-server-up="poetry run zenml login --local"

start-zenml-local=[
    "local-zenml-server-down",
    "local-zenml-server-up",
     "set-local-stack"
]

## Run Data ETL pipelines:
run-data-etl-user1="poetry run python -m pipelines.run_pipeline --run-etl --no-cache --etl-config-filename data_etl_user1.yaml"
run-data-etl-user2="poetry run python -m pipelines.run_pipeline --run-etl --no-cache --etl-config-filename data_etl_user2.yaml"
run-data-etl-user3="poetry run python -m pipelines.run_pipeline --run-etl --no-cache --etl-config-filename data_etl_user3.yaml"
run-data-etl-user4="poetry run python -m pipelines.run_pipeline --run-etl --no-cache --etl-config-filename data_etl_user4.yaml"

run-data-etl-pipeline=[
    "run-data-etl-user1",
    "run-data-etl-user2",
    "run-data-etl-user3",
    "run-data-etl-user4"
]
